:lipstick: Fix button bug where text would wrap and cause certain buttons to grow, now using CSS to have the content cut off with ... at the end if the name is too long

--- a/style.css
+++ b/style.css
@@ -79,6 +79,9 @@ input, .alert, .greyBtnBlock {
 }
 .person {
     width: 70%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .delete {
     width: 20%;
